test/typeerrors/ex1.golden
Building file ../test/typeerrors/ex1.act
  Compiling ex1.act for release

ERROR: Error when compiling ex1 module: Type error

  |
4 |a = f(3)
  |    ^^^^


  |
1 |def f(x,y):
  |    ^
Type incompatibility between definition of and call of f (too few arguments in call)
f is inferred to have a type of the form [A(Plus)] => _(A, A) -> A

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

